--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Profile</title>
+  <title>Profileee</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -84,3 +84,4 @@
 </body>
 
 </html>
+
